--- a/frontend/views/provider/orderlist.html
+++ b/frontend/views/provider/orderlist.html
@@ -46,6 +46,7 @@
                                 <p>Tomorrow after 10:00 AM</p>
                             </div>
                         </div>
+                        <p class="text-gray-500 text-sm mt-3 font-semibold">Issue: <span class="font-normal">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos vero sequi, inventore nulla nostrum delectus molestias incidunt ipsam sint minima nam impedit natus? Sed consequatur repellat fuga inventore? Aut, delectus!</span></p>
                         <div class="mt-2 flex justify-end space-x-2">
                             <button class="inline-flex items-center px-4 py-2 border border-primary font-medium rounded text-primary">Decline</button>
                             <button class="inline-flex items-center px-4 py-2 border border-transparent font-medium rounded text-white bg-primary">Accept order</button>
