--- a/frontend/views/user/service_profile.html
+++ b/frontend/views/user/service_profile.html
@@ -18,8 +18,8 @@
             <img src="https://c8.alamy.com/comp/DERFBR/colourful-indian-shop-in-puttaparthi-andhra-pradesh-india-DERFBR.jpg"
                 alt="Service Provider" class="w-60 h-60 object-contain">
             <div>
-                <h2 class="text-4xl font-bold text-gray-800">Ananta Plumbing Service</h2>
-                <p class="text-gray-500">Plumbing</p>
+                <h2 class="flex text-3xl md:text-4xl font-bold text-gray-800">Ananta Plumbing Service <p class="mt-3"><span class="flex bg-primary/80 text-white ml-2 px-2 py-1 rounded text-xs"><i data-lucide="badge-check" class="h-4 w-4"></i>Verifed</span></p></h2>
+                <p class="flex text-gray-500">Plumbing</p>
                 <div class="mt-4 space-y-1 text-primary">
                     <div class="flex items-center gap-1">
                         <i data-lucide="map-pin" class="h-4"></i>
