--- a/frontend/views/user/user_profile.html
+++ b/frontend/views/user/user_profile.html
@@ -45,18 +45,20 @@
                 <p class="ml-1 text-gray-500 text-sm">Recidential Address</p>
                 <Textarea rows="3" class="resize-none border outline-none focus:border-primary rounded-sm w-full p-2 text-gray-600"></Textarea>
             </div>
-            <div class="my-2">
-                <p class="ml-1 text-gray-500 text-sm">City</p>
-                <input type="text" name="city" class="border outline-none focus:border-primary rounded-sm w-full p-2 text-gray-600">
-            </div>
-            <div class="my-2">
-                <p class="ml-1 text-gray-500 text-sm">State</p>
-                <input type="text" name="state" class="border outline-none focus:border-primary rounded-sm w-full p-2 text-gray-600">
-            </div>
-            <div class="my-2">
-                <p class="ml-1 text-gray-500 text-sm">Country</p>
-                <input type="text" name="country" class="border outline-none focus:border-primary rounded-sm w-full p-2 text-gray-600">
-            </div>
+            <div class="sm:grid sm:grid-cols-3 sm:gap-2">
+                <div class="my-2">
+                    <p class="ml-1 text-gray-500 text-sm">City</p>
+                    <input type="text" name="city" class="border outline-none focus:border-primary rounded w-full p-2 text-gray-600">
+                </div>
+                <div class="my-2">
+                    <p class="ml-1 text-gray-500 text-sm">State</p>
+                    <input type="text" name="state" class="border outline-none focus:border-primary rounded w-full p-2 text-gray-600">
+                </div>
+                <div class="my-2">
+                    <p class="ml-1 text-gray-500 text-sm">Country</p>
+                    <input type="text" name="country" class="border outline-none focus:border-primary rounded w-full p-2 text-gray-600">
+                </div>
+                </div>
             <button class="bg-primary py-2 px-3 rounded text-white w-full">Edit Information</button>
             </form>
         </div>
