--- a/frontend/views/user/user_complaintlist.html
+++ b/frontend/views/user/user_complaintlist.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile</title>
+    <title>complaint</title>
+    <link rel="icon" type="image/png" href="/frontend/public/img/ezservice logo.png">
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Custom Tailwind Configuration -->
