--- a/frontend/views/provider/complaint.html
+++ b/frontend/views/provider/complaint.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>complaint box</title>
+    <link rel="icon" type="image/png" href="/frontend/public/img/ezservice logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Custom Tailwind Configuration -->
     <script src="/frontend/public/js/color_config.js"></script>
