--- a/frontend/views/user/registration.html
+++ b/frontend/views/user/registration.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Form</title>
+    <link rel="icon" type="image/png" href="/frontend/public/img/ezservice logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/frontend/public/js/color_config.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
