--- a/frontend/views/user/user_servicelist.html
+++ b/frontend/views/user/user_servicelist.html
@@ -14,7 +14,7 @@
 </head>
 <body class="font-sans">
     <section class="p-5 bg-white">
-        <p class="text-gray-800 font-bold text-xl text-green-600">Booked Services</p>
+        <p class="text-gray-800 font-bold text-xl text-primary">Booked Services</p>
         <div class="m-2 p-4 bg-gray-50 border-b rounded hover:border-primary">
             <p class="font-semibold text-xl">Ananta Plumbing Service</p>
             <p class="leading-none mt-2">issue: <span class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi quibusdam veritatis deleniti eos itaque laboriosam. Excepturi, eaque! Doloremque voluptate, excepturi laudantium iusto, laboriosam nostrum quod provident consequuntur animi similique quibusdam.</span></p>
@@ -26,7 +26,7 @@
     </section>
 
     <section class="p-5 bg-white">
-        <p class="text-gray-800 font-bold text-xl text-red-600">Fullfilled Services</p>
+        <p class="text-gray-500 font-bold text-xl">Fullfilled Services</p>
         <div class="m-2 p-4 bg-gray-50 border-b rounded hover:border-primary">
             <p class="font-semibold text-xl">Oleka Home Cleaning</p>
             <p class="leading-none mt-2">issue: <span class="text-sm text-gray-600">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi quibusdam veritatis deleniti eos itaque laboriosam. Excepturi, eaque! Doloremque voluptate, excepturi laudantium iusto, laboriosam nostrum quod provident consequuntur animi similique quibusdam.</span></p>
