--- a/frontend/views/provider/index.html
+++ b/frontend/views/provider/index.html
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="flex items-center">
-                    <i data-lucide="align-center" id="navMenuBtn" class="h-8 w-8 block sm:hidden hover:text-primary"></i>
+                    <i data-lucide="align-right" id="navMenuBtn" class="h-8 w-8 block sm:hidden hover:text-primary"></i>
                 </div>
             </div>
             
