--- a/frontend/views/user/about.html
+++ b/frontend/views/user/about.html
@@ -148,7 +148,7 @@
     <div class="flex flex-col md:flex-row items-center gap-8 mx-auto bg-white p-7 md:p-10 shadow-lg h-full rounded my-5 border-b hover:border-primary">
         <div class="w-full md:w-2/3 space-y-6">
           <h1 class="text-2xl md:text-4xl font-bold text-gray-800 -mb-4">
-            Take Conversation
+            Send Service Request
           </h1>
           <p class="text-gray-600">
             Took conversation is a convenient platform that allows users to schedule conversations with service providers effortlessly. It streamlines the booking process by providing real-time availability, reminders, and easy rescheduling options..
