--- a/frontend/views/provider/index.html
+++ b/frontend/views/provider/index.html
@@ -36,6 +36,9 @@
                         <a href="complaint.html" class="border-transparent text-gray-200 sm:text-gray-500 hover:border-gray-300 hover:border-b hover:text-white pb-2 sm:pb-0 sm:hover:text-gray-700 inline-flex items-center px-1 pt-1 sm:border-b-2 text-sm tracking-wide md:font-medium">
                             Complaints
                         </a>
+                        <a href="complaint.html" class="border-transparent text-gray-200 sm:text-gray-500 hover:border-gray-300 hover:border-b hover:text-white pb-2 sm:pb-0 sm:hover:text-gray-700 inline-flex items-center px-1 pt-1 sm:border-b-2 text-sm tracking-wide md:font-medium">
+                            Analysis
+                        </a>
                     </div>
                 </div>
                 <div class="flex items-center">
