--- a/frontend/views/user/index.html
+++ b/frontend/views/user/index.html
@@ -38,6 +38,7 @@
                     <a href="#" class="text-primary">Home</a>
                     <a href="services.html" class="text-gray-600 hover:text-gray-900">Services</a>
                     <a href="service_ranking.html" class="text-gray-600 hover:text-gray-900">Ranking</a>
+                    <a href="service_ranking.html" class="text-gray-600 hover:text-gray-900">Templates</a>
                     <a href="complaint.html" class="text-gray-600 hover:text-gray-900">Complaint</a>
                     <a href="about.html" class="text-gray-600 hover:text-gray-900">About</a>
                 </div>
