--- a/frontend/views/provider/service.html
+++ b/frontend/views/provider/service.html
@@ -37,13 +37,15 @@
             </div>
             
             <div class="overflow-x-auto">
-                <table class="min-w-full divide-y divide-gray-200">
+                <table class="min-w-full divide-y">
                     <thead class="bg-gray-50">
                         <tr>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Service Name</th>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Category</th>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">VISITING CHARGE(₹)</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">INSTANT SERVICE CHARGE(₹)</th>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">DESCRIPTION</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">COVER IMAGE</th>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">SERVICE LOCATIONS</th>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">EXPERIENCE</th>
                             <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">PROVIDED SERVICES</th>
@@ -262,12 +264,31 @@
                             </span>
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">₹${service.price.toFixed(2)}</td>
+                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">₹500.00</td>
                         <td class="px-6 py-4 text-sm text-gray-500">
                             <div class="w-[300px]">${service.description}</div></td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">-</td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">-</td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">-</td>
-                            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">-</td>
+                            <td class="px-6 py-4 text-sm text-gray-500"><div class="min-w-[300px]">https://static.vecteezy.com/system/resources/thumbnails/036/324/708/small/ai-generated-picture-of-a-tiger-walking-in-the-forest-photo.jpg</div></td>
+                            <td class="px-6 py-4 text-sm text-gray-500">
+                                <ul class="w-[200px]">
+                                <li>Naroda, ahmedaba, india</li>
+                                <li>Narol</li>
+                                <li>Nikol</li>
+                                <li>memnagar</li>
+                                </ul></td>
+                            <td class="px-6 py-4 text-sm text-gray-500"><div>7</div></td>
+                            <td class="px-6 py-4 text-sm text-gray-500">
+                                <ul class="w-[300px]">
+                                    <li>Pipe Repairs & Replacements</li>
+                                    <li>Leak Detection & Fixing</li>
+                                    <li>Water Heater Installation</li>
+                                    <li>Drain Cleaning & Unclogging</li>
+                                    <li>Bathroom & Kitchen Plumbing</li>
+                                    </ul></td>
+                            <td class="px-6 py-4 text-sm text-gray-500">
+                                <ul class="min-w-[300px]">
+                                    <li>https://images.pexels.com/photos/674010/pexels-photo-674010.jpeg?cs=srgb&dl=pexels-anjana-c-169994-674010.jpg&fm=jpg</li>
+                                    <li>https://static.vecteezy.com/system/resources/thumbnails/036/324/708/small/ai-generated-picture-of-a-tiger-walking-in-the-forest-photo.jpg</li>
+                                    </ul></td>
                         <td class="px-6 py-4 whitespace-nowrap text-sm font-medium space-y-2">
                             <button class="text-primary hover:text-primary-900 mr-3 flex items-center" data-action="edit" data-id="${service.id}">
                                 <i data-lucide="edit-2" class="w-4 h-4 mr-1"></i> Edit
