--- a/frontend/views/user/service_profile.html
+++ b/frontend/views/user/service_profile.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="bg-gray-50">
-    <main class="p-2 sm:p-8 bg-white shadow-lg rounded-lg md:m-5 border border-dashed border-primary">
+    <main class="p-2 sm:p-8 bg-white shadow-lg rounded-lg md:my-5 mx-auto border border-dashed border-primary max-w-7xl">
         <div class="flex flex-col md:flex-row items-center gap-8">
             <img src="https://c8.alamy.com/comp/DERFBR/colourful-indian-shop-in-puttaparthi-andhra-pradesh-india-DERFBR.jpg"
                 alt="Service Provider" class="w-60 h-60 object-contain">
@@ -23,20 +23,20 @@
                 <p class="flex text-gray-500">Plumbing</p>
                 <div class="mt-4 space-y-1 text-primary">
                     <div class="flex items-center gap-1">
-                        <i data-lucide="map-pin" class="h-4"></i>
-                        <p class="text-gray-800 tracking-wide text-sm">Borivali, Mumbai</p>
+                        <i data-lucide="shield-user" class="h-4"></i>
+                        <p class="text-gray-800 tracking-wide text-sm">Ananta services<span class="text-[9px]"> (Provider)</span></p>
+                    </div>
+                    <div class="flex items-center gap-1">
+                        <i data-lucide="clock-arrow-up" class="h-4"></i>
+                        <p class="text-gray-800 tracking-wide text-sm"><span>36</span>+ Fullfilled Service Requiests</p>
                     </div>
                     <div class="flex items-center gap-1">
                         <i data-lucide="briefcase" class="h-4"></i>
-                        <p class="text-gray-800 tracking-wide text-sm"><span>7 Years</span> of Experiance</p>
+                        <p class="text-gray-800 tracking-wide text-sm"><span>7</span>+ Years of Experiance</p>
                     </div>
                     <div class="flex items-center gap-1">
-                        <i data-lucide="phone" class="h-4"></i>
-                        <p class="text-gray-800 tracking-wide text-sm">+91 9553636383</p>
-                    </div>
-                    <div class="flex items-center gap-1">
-                        <i data-lucide="mail" class="h-4"></i>
-                        <p class="text-gray-800 tracking-wide text-sm">anantaservice@gmail.com</p>
+                        <i data-lucide="map-pin" class="h-4"></i>
+                        <p class="text-gray-800 tracking-wide text-sm">Borivali, Mumbai</p>
                     </div>
                 </div>
             </div>
@@ -47,8 +47,8 @@
                 expertise and customer-centric approach ensure high-quality service and client satisfaction.</p>
         </section>
         <section class="mt-3 flex">
-            <p class="text-primary font-bold text-2xl">₹4100</p>
-            <i data-lucide="circle-alert" class="h-3 w-5 mt-3 text-gray-500 cursor-pointer"></i>
+            <p class="text-primary font-bold text-2xl">₹500</p>
+            <a href="/frontend/views/common/terms&conditions.html"><i data-lucide="circle-alert" class="h-3 w-5 mt-3 text-gray-500 cursor-pointer"></i></a>
         </section>
         <section class="mt-2 gap-1 space-y-1 sm:space-y-0 sm:flex">
                 <button class="px-3 py-2 border bg-primary text-white tracking-wide font-medium rounded">Get Service</button>
